--- a/hilti/dev/src/app/app.component.scss
+++ b/hilti/dev/src/app/app.component.scss
@@ -5,6 +5,7 @@
 	& > div {
 		float: left;
 		padding: 5px;
+		height: 29px;
 	}
 	.logo{
 		width: 60%;
@@ -19,7 +20,7 @@
 		color: #fff;
 		font-weight: bold;
 		font-size: 12px;
-		line-height: 16px;
+		line-height: 22px;
 		padding-left: 15px;
 	}
 }
