--- a/hilti/dev/src/app/main/project/project.component.scss
+++ b/hilti/dev/src/app/main/project/project.component.scss
@@ -1,3 +1,12 @@
+
+.form-group{
+	margin: 0;
+}
+.breadcrumb > li + li:before{
+	content: "|";
+	padding: 0 15px;
+}
+
 .breadcrumb{
 	margin-top: -14px;
 	padding: 15px;
@@ -14,8 +23,53 @@
 .width-10{
 	width: 10%;
 }
+@media (max-width: 767px) {  
+	.project-legent{
+		.form-group{
+			input{
+				width: auto !important;
+			}
+		}
+	}
+	.project-details{
+		height: calc(100vh - 140px);
+	}
+	.modal-body-container{
+		overflow: auto;
+		height: calc(100vh - 190px);
+	}
+}
+@media (min-width: 768px) and (max-width: 991px) {  
+	.project-legent{
+		.form-group{
+			input{
+				width: auto !important;
+			}
+		}
+	}
+	.project-details{
+		height: calc(100vh - 140px);
+	}
+	.modal-body-container{
+		overflow: auto;
+		height: calc(100vh - 190px);
+	}
+}
+@media (min-width: 992px) and (max-width: 1199px) {  
+	.project-details{
+		height: calc(100vh - 140px);
+	}
+	.modal-body-container{
+		overflow: auto;
+		height: calc(100vh - 190px);
+	}
+}
+@media (min-width: 1200px) {  
+
+}
 
 .project-details{
+
 	ul{
 		margin: 0;
 		padding: 0;
@@ -23,9 +77,15 @@
 	}
 
 	.project-legent{
-		background-color: #dadada;
+		background-color: #f0f0f0;
 		margin: -20px 0 20px;
 		padding: 10px;
+		width: 100%;
+		overflow: hidden;
+		position: relative;
+			border-style: solid;
+			border-color: #ccc;
+			border-width: 1px 0;
 
 		.form-control-static{
 			font-size: 12px;
@@ -35,6 +95,15 @@
 		.form-control{
 			width: 110px;
 			margin: 0 10px;
+		}
+
+		.btn-close{
+			position: absolute;
+			top: 50%;
+			margin-top: -8px;
+			right: 18px;
+			cursor: pointer;
+			color: #5d5d5d;
 		}
 	}
 
@@ -103,6 +172,34 @@
 
 			.control-panel{
 				float: right;
+			}
+		}
+
+		.control-panel{
+			float: right;
+			overflow: hidden;
+			margin: -4px 0 10px;
+			padding: 4px 0;
+
+			&.back{
+				float: left;
+			}
+
+			.glyphicon{
+				float: left;
+				font-size: 14px;
+				line-height: 20px;
+				margin-right: 20px;
+				cursor: pointer;
+				color: #5d5d5d;
+
+				&:before{
+					font-size: 20px;
+					line-height: 20px;
+					position: relative;
+					top: 4px;
+					padding-right: 5px;
+				}
 			}
 		}
 
